# Reaping2

./: .gitignore  CMakeHelper.cmake  CMakeLists.txt  LICENSE  README.md  astylerc  build.cmake  build.sh
run/: CMakeLists.txt  data.pkg  run.bat  run_multi.bat  settings.json  update_data.bat
run/data/: autoids  autoids.content  autoids.src  font.json  recognizers.json  recognizers_excludes.json  renderable_actions.json  settings.json  targets.json  textures.json
run/data/actors/: actors.json  backgrouns.json  blue_grenade.json  cell.json  end.json  lucky_rocket.json  pistol.json  rusty_reaper.json  shotgun.json
run/data/editor_targets/: AccuracyBuff.json  AccuracyBuff_t.json  ArmorBuff.json  CloakBuff.json  CloakBuff_t.json  HealOverTimeBuff.json  MoveSpeedBuff.json  README.txt  blue_grenade_normal_item.json  blue_grenade_normal_item_t.json  bush_50.json  cloak_normal_item.json  concrete.json  concrete_t.json  ctf_flag_spawn_blue.json  ctf_flag_spawn_red.json  (+43 more)
src/audio/: CMakeLists.txt  audio_buffer.cpp  audio_buffer.h  audio_effect.h  audio_effect_player.cpp  audio_effect_player.h  audio_effect_repo.cpp  audio_effect_repo.h  audio_file.cpp  audio_file.h  audio_player.cpp  audio_player.h  audio_system.cpp  audio_system.h  i_audio.h  mixer.cpp  mixer.h  vorbis_file.cpp  vorbis_file.h  vorbis_file_cache.cpp  vorbis_file_cache.h
src/core/: CMakeLists.txt  acceleration_component.cpp  acceleration_component.h  accuracy_component.cpp  accuracy_component.h  action.cpp  action.h  action_holder.cpp  action_holder.h  action_repo.cpp  action_repo.h  activatable_component.cpp  activatable_component.h  activity_component.cpp  activity_component.h  activity_grid.cpp  activity_grid.h  activity_traits.cpp  activity_traits.h  actor.cpp  actor.h  actor_event.h  actor_factory.cpp  actor_factory.h  aoe_collision_component.cpp  aoe_collision_component.h  armor_component.cpp  armor_component.h  attachable_component.cpp  attachable_component.h  attractable_component.cpp  attractable_component.h  attractor_component.cpp  attractor_component.h  audible_component.cpp  audible_component.h  audible_event.h  auto_id.cpp  auto_id.h  blue_grenade_normal_item.cpp  (+375 more)
src/engine/: CMakeLists.txt  acceleration_system.cpp  acceleration_system.h  activatable_system.cpp  activatable_system.h  activity_system.cpp  activity_system.h  armor_system.cpp  armor_system.h  attach_state_changed_event.h  attachable_system.cpp  attachable_system.h  attractable_system.cpp  attractable_system.h  attractor_system.cpp  attractor_system.h  chest_system.cpp  chest_system.h  client_datas_changed_event.h  client_score_event.h  cloak_changed_event.h  cloak_system.cpp  cloak_system.h  collision_system.cpp  collision_system.h  connection_event.h  ctf_soldier_spawn_system.cpp  ctf_soldier_spawn_system.h  detonate_on_hit_system.cpp  detonate_on_hit_system.h  drop_on_death_system.cpp  drop_on_death_system.h  engine.cpp  engine.h  explode_on_death_system.cpp  explode_on_death_system.h  explode_on_hit_system.cpp  explode_on_hit_system.h  explosion_system.cpp  explosion_system.h  (+84 more)
src/main/: CMakeLists.txt  main.cpp  test.cpp  window.cpp  window.h  window_settings.cpp  window_settings.h
src/network/: CMakeLists.txt  accuracy_message.cpp  accuracy_message.h  actor_frequency_timer.cpp  actor_frequency_timer.h  actor_list_message.cpp  actor_list_message.h  border_message.cpp  border_message.h  chest_message.cpp  chest_message.h  client_datas_message.cpp  client_datas_message.h  client_id_changed.h  client_id_message.cpp  client_id_message.h  client_id_message_handler_sub_system.cpp  client_id_message_handler_sub_system.h  client_list_changed_event.h  client_list_message.h  client_list_message_handler_sub_system.cpp  client_list_message_handler_sub_system.h  client_list_system.cpp  client_list_system.h  client_ready_event.h  client_score_message.cpp  client_score_message.h  client_system.cpp  client_system.h  cloak_changed_message.cpp  cloak_changed_message.h  collision_message.cpp  collision_message.h  create_actor_message.cpp  create_actor_message.h  create_actor_message_handler_sub_system.cpp  create_actor_message_handler_sub_system.h  create_actor_message_sender_system.cpp  create_actor_message_sender_system.h  ctf_client_datas_changed_event.h  (+125 more)
src/platform/: CMakeLists.txt  auto_id.cpp  auto_id.h  backtrace.cpp  backtrace.h  cache.h  checksum.cpp  checksum.h  compression.cpp  compression.h  event.cpp  event.h  export.h  factory.h  filesystem.cpp  filesystem.h  filesystem_utils.cpp  filesystem_utils.h  folder_package.cpp  folder_package.h  frequency_timer.cpp  frequency_timer.h  game_clock.cpp  game_clock.h  glm_fix.h  i_platform.h  id_storage.cpp  id_storage.h  ifile.cpp  ifile.h  init.cpp  init.h  ipackage.h  jsonreader.cpp  jsonreader.h  jsonreader_templates.cpp  jsonreader_templates.h  log.cpp  log.h  memoryfile.cpp  (+33 more)
src/render/: CMakeLists.txt  action_order.cpp  action_renderer.cpp  action_renderer.h  action_renderer_factory.cpp  action_renderer_factory.h  action_renderer_loader.h  action_renderer_loader_repo.cpp  action_renderer_loader_repo.h  actor_renderer.cpp  actor_renderer.h  bar_model.cpp  bar_model.h  body_move_action_renderer.cpp  body_move_action_renderer.h  body_move_recognizer.cpp  body_move_recognizer.h  border_action_renderer.cpp  border_action_renderer.h  border_recognizer.cpp  border_recognizer.h  camera.cpp  camera.h  cell_action_renderer.cpp  cell_action_renderer.h  corpses.cpp  corpses.h  counter.cpp  counter.h  ctf_flag_action_renderer.cpp  ctf_flag_action_renderer.h  ctf_flag_recognizer.cpp  ctf_flag_recognizer.h  ctf_hat_action_renderer.cpp  ctf_hat_action_renderer.h  ctf_hat_recognizer.cpp  ctf_hat_recognizer.h  ctf_head_color_action_renderer.cpp  ctf_head_color_action_renderer.h  damage_particles.cpp  (+137 more)
src/ui/: CMakeLists.txt  bar.cpp  bar.h  button.cpp  button.h  fixed_ratio_container.cpp  fixed_ratio_container.h  grid.cpp  grid.h  i_ui.h  image.cpp  image.h  root.cpp  root.h  text_widget.cpp  text_widget.h  ui.cpp  ui.h  ui_model.cpp  ui_model.h  widget.cpp  widget.h  widget_factory.cpp  widget_factory.h
(+1149 files in other folders)
